syntax = "proto3";

service Numberer {
	rpc ValidateNumber (NumberRequest) returns (ResultReply);
}

message NumberRequest {
string number = 1;
}

message ResultReply {
bool result = 1;
}